# kirokyu

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DECISIONS.md  LICENSE  README.md  checkpoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: PRODUCT.md  PRODUCT.md:Zone.Identifier  phase-0-foundation.md  project-plan.md
docs/explanations/: adapters.md  application-layer.md  dependency-inversion.md  domain-entities.md  domain-value-objects.md  testing-with-pytest.md
src/kirokyu/: bootstrap.py
src/kirokyu/adapters/api/: app.py
src/kirokyu/adapters/cli/: app.py
src/kirokyu/adapters/in_memory/: providers.py  repository.py
src/kirokyu/adapters/json_file/: repository.py
src/kirokyu/adapters/sqlite/: repository.py  schema.py
src/kirokyu/adapters/ui/: app.py
src/kirokyu/adapters/ui/pages/: analytics.py  task_detail.py  task_list.py  workspace.py
src/kirokyu/analytics/: queries.py
src/kirokyu/application/: dtos.py
src/kirokyu/application/ports/: providers.py  task_repository.py
src/kirokyu/application/use_cases/: create_task.py  mutate_tasks.py  query_tasks.py
src/kirokyu/domain/: entities.py  exceptions.py  value_objects.py
src/kirokyu/workspaces/: models.py  registry.py
tests/: conftest.py  test_analytics.py  test_sanity.py  test_task_entity.py  test_use_cases.py  test_value_objects.py  test_workspaces.py
tests/adapters/: contract.py  test_adapters.py  test_api.py
