[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirokyu"
version = "0.1.0"
description = "A task management system with a clean, pluggable architecture."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Amr Younis", email = "youam50@hotmail.com" }
]
keywords = ["task-management", "todo", "productivity", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kirokyu"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (unused imports, undefined names)
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear (common bug patterns)
    "UP",     # pyupgrade (modernization suggestions)
    "N",      # pep8-naming
    "SIM",    # flake8-simplify (simpler equivalents)
    "RUF",    # Ruff's own rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true

# Quality-of-life extras (some are redundant with strict but worth being explicit)
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

# Source layout — tell mypy where to find code and the package root
files = ["src/kirokyu", "tests"]
mypy_path = "src"

# Relax strict mode for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
